--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     //moshi deserializer/converter
     implementation("com.squareup.moshi:moshi:1.9.2")
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.3")
 
     //retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
