--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
 }
 
-def lifecycle_version = '2.2.0'
+def lifecycle_version = '2.1.0'
 def coroutines_android_version = '1.3.2'
 def dagger_version = '2.25.2'
 
@@ -70,7 +70,14 @@ dependencies {
     //retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
+    //testing
     testImplementation 'junit:junit:4.12'
+
+    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+
+    testImplementation "io.mockk:mockk:1.9"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
